Require Java 8.  Replace Guava FluentIterables with streams.