@@ -1,7 +1,5 @@
 package org.elasticsearch.index.analysis;
 
-import com.google.common.base.Function;
-import com.google.common.collect.FluentIterable;
 import org.apache.lucene.analysis.Tokenizer;
 import org.elasticsearch.common.inject.Inject;
 import org.elasticsearch.common.inject.assistedinject.Assisted;
@@ -10,7 +8,9 @@ import org.elasticsearch.index.Index;
 import org.elasticsearch.index.analysis.url.URLTokenizer;
 import org.elasticsearch.index.settings.IndexSettingsService;
 
+import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * Joe Linn
@@ -33,12 +33,9 @@ public class URLTokenizerFactory extends AbstractTokenizerFactory {
 
         String[] parts = settings.getAsArray("part");
         if (parts != null && parts.length > 0) {
-            this.parts = FluentIterable.of(parts).transform(new Function<String, URLPart>() {
-                @Override
-                public URLPart apply(String input) {
-                    return URLPart.fromString(input);
-                }
-            }).toList();
+            this.parts = Arrays.stream(parts)
+                    .map(URLPart::fromString)
+                    .collect(Collectors.toList());
         }
         this.urlDecode = settings.getAsBoolean("url_decode", false);
         this.tokenizeHost = settings.getAsBoolean("tokenize_host", true);
